# ptokens-bridges

./: .gitignore  .gitmodules  README.md
pbtc-on-eos/apps/strongbox/: .gitignore  build.gradle  settings.gradle
pbtc-on-eos/apps/strongbox/app/: build.gradle
pbtc-on-eos/apps/strongbox/app/src/main/: AndroidManifest.xml
pbtc-on-eos/apps/strongbox/app/src/main/res/values/: strings.xml
pbtc-on-eos/apps/strongbox/common/: .gitignore  build.gradle
pbtc-on-eos/apps/strongbox/common/jni/pbtc-on-eos/: Cargo.toml
pbtc-on-eos/apps/strongbox/common/jni/pbtc-on-eos/src/: constants.rs  errors.rs  get_database.rs  initialize_logger.rs  lib.rs
pbtc-on-eos/apps/strongbox/logging/: show
pbtc-on-eos/apps/strongbox/sqlite3/: build.gradle  sqlite3-sha3.aar
pbtc-on-eos/apps/vanilla/: Cargo.toml
pbtc-on-eos/apps/vanilla/scripts/: init-eos.sh
pbtc-on-eos/apps/vanilla/src/: errors.rs  get_cli_args.rs  get_database.rs  main.rs  usage_info.rs
pbtc-on-eth/apps/strongbox/: .gitignore  README.md
pbtc-on-eth/apps/strongbox/app/: build.gradle
pbtc-on-eth/apps/strongbox/app/src/main/: AndroidManifest.xml
pbtc-on-eth/apps/strongbox/common/jni/pbtc-on-eth/: Cargo.toml
pbtc-on-eth/apps/strongbox/common/jni/pbtc-on-eth/src/: constants.rs  errors.rs  get_database.rs  lib.rs
pbtc-on-eth/apps/strongbox/common/src/main/: AndroidManifest.xml
pbtc-on-eth/apps/vanilla/: .gitignore  Cargo.toml
pbtc-on-eth/apps/vanilla/scripts/: init-btc.sh  init-eth.sh  rsync-script.sh
pbtc-on-eth/apps/vanilla/src/: get_cli_args.rs  get_database.rs  main.rs  usage_info.rs
(+43 files in other folders)
