[package]
name = "app_jni"
version = "0.1.0"
authors = ["Mauro Piazza <mauro.piazza.01@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
hex = "=0.4.0"
jni = "0.14.0"
simplelog = "0.7.3"
android_log = "0.1.3"
serde_derive = "1.0.101"
serde = { version = "1", features = ["derive"] }
ptokens_core = { path = "../../../../../core", features=["debug"] }

[lib]
crate_type = ["staticlib", "dylib"]
